tests/negative/test_owning_asgn_owning.orb
data Foo {
    x:i32
} (fnc dropFoo (val:Foo::noDrop) () {});

fnc main () () {
    sym f0:Foo f1:Foo;
    = f0 f1;
};